* Update ZMQ::Socket state to only become disconnected after all connected/bound endpoints are removed with disconnect/unbind.
* Fix ZMQ::Socket connect/bind bug with percent symbols in the address URI.
* Add ZMQ::Socket#last_endpoint for retrieving the string URI with an ephemeral port number filled in.

== 1.7.4 (November 25, 2013)

* 	Update ZMQ::Socket to support strings with null bytes in them (Matt Connolly)

== 1.7.3 (November 11, 2013)

* Add an array of poll items to ZMQ::Loop so that they are not garbage collected. #25

== 1.7.2 (October 12, 2013)

* Upgrade to libzmq 4.0.1 and czmq 2

== 1.7.1 (July 25, 2013)

* FIX: ZMQ::Message#pop did not relase ownership of frame.
* FIX: !Important! ZMQ::Message was not marking owned ZMQ::Frame objects, leading to potential GC crash in 1.7.0.
* FIX: Fixed memory leak in ZMQ::Message.
* Updated license in gemspec and readme.

== 1.7.0 (July 21, 2013)

* ZMQ::Frame - Implemented an interal wrapper around the underlying czmq frame objects to better manage memory and object ownership. (Matt Connolly)
* ZMQ::Frame#gone? and ZMQ::Message#gone? - new methods, return true when the frame/message has been sent and is no longer available for accessing. Methods may return nil for read operations or raise ZMQ::Error if the frame/message would be changed by that method. (Matt Connolly)
* ZMQ::Message - iterators (#first, #next, #last and #to_a) return consistent frame objects (not duplicates as in previous versions) that can be used with #remove. (Matt Connolly)
* Sending a message or frame marks it as "gone". The underlying data objects will be released by ZeroMQ as the frames/messages are sent over the socket. (Matt Connolly)

== 1.6.4 (July 10, 2013)
* Depend on a checkout task for vendored submodule init (Matt Connolly)

== 1.6.3 (July 1, 2013)
* Mark socket wrapper is destroyed before calling destroy on the socket (Matt Connolly)
* Fix edge cases in socket monitor implementation (Matt Connolly)