@@ -220,9 +220,11 @@ static inline VALUE rb_czmq_ctx_socket_klass(int socket_type)
         case ZMQ_DEALER: return rb_cZmqDealerSocket;
                          break;
         case ZMQ_XPUB: return rb_cZmqXPubSocket;
-                      break;
+                       break;
         case ZMQ_XSUB: return rb_cZmqXSubSocket;
-                      break;
+                       break;
+        case ZMQ_STREAM: return rb_cZmqStreamSocket;
+                         break;
         default: rb_raise(rb_eZmqError, "ZMQ socket type %d not supported!", socket_type);
                  break;
     }
