@@ -213,3 +213,4 @@ require "zmq/socket/req"
 require "zmq/socket/rep"
 require "zmq/socket/router"
 require "zmq/socket/dealer"
+require "zmq/socket/stream"
