@@ -10,6 +10,7 @@
 * Update ZMQ::Socket state to only become disconnected after all connected/bound endpoints are removed with disconnect/unbind.
 * Fix ZMQ::Socket connect/bind bug with percent symbols in the address URI.
 * Add ZMQ::Socket#last_endpoint for retrieving the string URI with an ephemeral port number filled in.
+* Add STREAM socket type, using ruby class ZMQ::Socket::Stream.
 
 == 1.7.4 (November 25, 2013)
 
